Edited README via GitHub

--- a/README
+++ b/README
@@ -1,6 +1,3 @@
-This is the first Drupal 7 module... it's very very very simple ;-)
+There is now an official Drupal Module on drupal.org !
 
-I found the Chosen script from Harvest HQ really nice, so I decided to make a module.
-
-More informations at: http://harvesthq.github.com/chosen/
-
+Check it out here: http://drupal.org/project/chosen
